{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 44,
  "lineage": "f0b60022-16cc-68cf-618a-70f407e8d415",
  "resources": [
    {
      "module": "module.mlflow.module.mlflow.module.cloud_run.module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "module.mlflow.provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/autograb-dev/regions/australia-southeast1/networkEndpointGroups/mlflow-serverless-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-04-05T20:46:30.452-07:00",
            "description": "mlflow-serverless-neg",
            "enable_cdn": false,
            "fingerprint": "5I_tlpIWNnc=",
            "generated_id": 3044473891427974777,
            "iap": [
              {
                "oauth2_client_id": "1026007293393-9g71fhdufqts798r7olpa1lnm2eqfj47.apps.googleusercontent.com",
                "oauth2_client_secret": "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",
                "oauth2_client_secret_sha256": "aa3475eabe314543830127739535371d90d44bf2fd00ee91758bda0d9f3bad2d"
              }
            ],
            "id": "projects/autograb-dev/global/backendServices/mlflow-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "mlflow-lb-backend-default",
            "port_name": "http",
            "project": "autograb-dev",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/backendServices/mlflow-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.mlflow.module.mlflow.module.artifacts.google_storage_bucket.mlflow_artifacts_bucket",
            "module.mlflow.module.mlflow.module.cloud_run.data.google_project.project",
            "module.mlflow.module.mlflow.module.cloud_run.data.google_vpc_access_connector.connector",
            "module.mlflow.module.mlflow.module.cloud_run.google_cloud_run_service.mlflow_service",
            "module.mlflow.module.mlflow.module.cloud_run.google_compute_region_network_endpoint_group.serverless_neg",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.cloud_sql",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.gcs",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.secret",
            "module.mlflow.module.mlflow.module.database.data.google_sql_database_instance.mlflow_db_instance",
            "module.mlflow.module.mlflow.module.db_secret.google_secret_manager_secret.secret",
            "module.mlflow.module.mlflow.module.db_secret.google_secret_manager_secret_version.secret-version",
            "module.mlflow.module.mlflow.module.db_secret.random_password.password",
            "module.mlflow.random_id.artifacts_bucket_name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.mlflow.module.mlflow.module.cloud_run.module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "module.mlflow.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.110.164.212",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-04-05T19:56:14.329-07:00",
            "id": "projects/autograb-dev/global/addresses/mlflow-lb-address",
            "name": "mlflow-lb-address",
            "prefix_length": 0,
            "project": "autograb-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/addresses/mlflow-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.mlflow.module.mlflow.module.cloud_run.module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "module.mlflow.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/autograb-dev/global/forwardingRules/mlflow-lb",
            "ip_address": "34.110.164.212",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "mlflow-lb",
            "port_range": "80",
            "project": "autograb-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/forwardingRules/mlflow-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/targetHttpProxies/mlflow-lb-http-proxy"
          },
          "dependencies": [
            "module.mlflow.module.mlflow.module.artifacts.google_storage_bucket.mlflow_artifacts_bucket",
            "module.mlflow.module.mlflow.module.cloud_run.data.google_project.project",
            "module.mlflow.module.mlflow.module.cloud_run.data.google_vpc_access_connector.connector",
            "module.mlflow.module.mlflow.module.cloud_run.google_cloud_run_service.mlflow_service",
            "module.mlflow.module.mlflow.module.cloud_run.google_compute_region_network_endpoint_group.serverless_neg",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.cloud_sql",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.gcs",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.secret",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_backend_service.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_global_address.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_target_http_proxy.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_url_map.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_url_map.https_redirect",
            "module.mlflow.module.mlflow.module.database.data.google_sql_database_instance.mlflow_db_instance",
            "module.mlflow.module.mlflow.module.db_secret.google_secret_manager_secret.secret",
            "module.mlflow.module.mlflow.module.db_secret.google_secret_manager_secret_version.secret-version",
            "module.mlflow.module.mlflow.module.db_secret.random_password.password",
            "module.mlflow.random_id.artifacts_bucket_name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.mlflow.module.mlflow.module.cloud_run.module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "module.mlflow.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/autograb-dev/global/forwardingRules/mlflow-lb-https",
            "ip_address": "34.110.164.212",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "mlflow-lb-https",
            "port_range": "443",
            "project": "autograb-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/forwardingRules/mlflow-lb-https",
            "target": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/targetHttpsProxies/mlflow-lb-https-proxy"
          },
          "dependencies": [
            "module.mlflow.module.mlflow.module.artifacts.google_storage_bucket.mlflow_artifacts_bucket",
            "module.mlflow.module.mlflow.module.cloud_run.data.google_project.project",
            "module.mlflow.module.mlflow.module.cloud_run.data.google_vpc_access_connector.connector",
            "module.mlflow.module.mlflow.module.cloud_run.google_cloud_run_service.mlflow_service",
            "module.mlflow.module.mlflow.module.cloud_run.google_compute_region_network_endpoint_group.serverless_neg",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.cloud_sql",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.gcs",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.secret",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_backend_service.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_global_address.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_managed_ssl_certificate.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_ssl_certificate.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_target_https_proxy.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_url_map.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.random_id.certificate",
            "module.mlflow.module.mlflow.module.database.data.google_sql_database_instance.mlflow_db_instance",
            "module.mlflow.module.mlflow.module.db_secret.google_secret_manager_secret.secret",
            "module.mlflow.module.mlflow.module.db_secret.google_secret_manager_secret_version.secret-version",
            "module.mlflow.module.mlflow.module.db_secret.random_password.password",
            "module.mlflow.random_id.artifacts_bucket_name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.mlflow.module.mlflow.module.cloud_run.module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "module.mlflow.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-05T20:47:06.025-07:00",
            "id": "projects/autograb-dev/global/targetHttpProxies/mlflow-lb-http-proxy",
            "name": "mlflow-lb-http-proxy",
            "project": "autograb-dev",
            "proxy_bind": false,
            "proxy_id": 574535119730376277,
            "self_link": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/targetHttpProxies/mlflow-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/urlMaps/mlflow-lb-https-redirect"
          },
          "dependencies": [
            "module.mlflow.module.mlflow.module.artifacts.google_storage_bucket.mlflow_artifacts_bucket",
            "module.mlflow.module.mlflow.module.cloud_run.data.google_project.project",
            "module.mlflow.module.mlflow.module.cloud_run.data.google_vpc_access_connector.connector",
            "module.mlflow.module.mlflow.module.cloud_run.google_cloud_run_service.mlflow_service",
            "module.mlflow.module.mlflow.module.cloud_run.google_compute_region_network_endpoint_group.serverless_neg",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.cloud_sql",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.gcs",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.secret",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_backend_service.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_url_map.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_url_map.https_redirect",
            "module.mlflow.module.mlflow.module.database.data.google_sql_database_instance.mlflow_db_instance",
            "module.mlflow.module.mlflow.module.db_secret.google_secret_manager_secret.secret",
            "module.mlflow.module.mlflow.module.db_secret.google_secret_manager_secret_version.secret-version",
            "module.mlflow.module.mlflow.module.db_secret.random_password.password",
            "module.mlflow.random_id.artifacts_bucket_name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.mlflow.module.mlflow.module.cloud_run.module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "module.mlflow.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-05T20:47:06.054-07:00",
            "id": "projects/autograb-dev/global/targetHttpsProxies/mlflow-lb-https-proxy",
            "name": "mlflow-lb-https-proxy",
            "project": "autograb-dev",
            "proxy_bind": false,
            "proxy_id": 1917570478361542229,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/targetHttpsProxies/mlflow-lb-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/sslCertificates/mlflow-lb-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/urlMaps/mlflow-lb-url-map"
          },
          "dependencies": [
            "module.mlflow.module.mlflow.module.artifacts.google_storage_bucket.mlflow_artifacts_bucket",
            "module.mlflow.module.mlflow.module.cloud_run.data.google_project.project",
            "module.mlflow.module.mlflow.module.cloud_run.data.google_vpc_access_connector.connector",
            "module.mlflow.module.mlflow.module.cloud_run.google_cloud_run_service.mlflow_service",
            "module.mlflow.module.mlflow.module.cloud_run.google_compute_region_network_endpoint_group.serverless_neg",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.cloud_sql",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.gcs",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.secret",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_backend_service.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_managed_ssl_certificate.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_ssl_certificate.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_url_map.default",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.random_id.certificate",
            "module.mlflow.module.mlflow.module.database.data.google_sql_database_instance.mlflow_db_instance",
            "module.mlflow.module.mlflow.module.db_secret.google_secret_manager_secret.secret",
            "module.mlflow.module.mlflow.module.db_secret.google_secret_manager_secret_version.secret-version",
            "module.mlflow.module.mlflow.module.db_secret.random_password.password",
            "module.mlflow.random_id.artifacts_bucket_name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.mlflow.module.mlflow.module.cloud_run.module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "module.mlflow.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-05T20:46:53.628-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/backendServices/mlflow-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "x0IT76KvxzY=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/autograb-dev/global/urlMaps/mlflow-lb-url-map",
            "map_id": 2902552430912994882,
            "name": "mlflow-lb-url-map",
            "path_matcher": [],
            "project": "autograb-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/urlMaps/mlflow-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mlflow.module.mlflow.module.artifacts.google_storage_bucket.mlflow_artifacts_bucket",
            "module.mlflow.module.mlflow.module.cloud_run.data.google_project.project",
            "module.mlflow.module.mlflow.module.cloud_run.data.google_vpc_access_connector.connector",
            "module.mlflow.module.mlflow.module.cloud_run.google_cloud_run_service.mlflow_service",
            "module.mlflow.module.mlflow.module.cloud_run.google_compute_region_network_endpoint_group.serverless_neg",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.cloud_sql",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.gcs",
            "module.mlflow.module.mlflow.module.cloud_run.google_project_iam_member.secret",
            "module.mlflow.module.mlflow.module.cloud_run.module.lb-http.google_compute_backend_service.default",
            "module.mlflow.module.mlflow.module.database.data.google_sql_database_instance.mlflow_db_instance",
            "module.mlflow.module.mlflow.module.db_secret.google_secret_manager_secret.secret",
            "module.mlflow.module.mlflow.module.db_secret.google_secret_manager_secret_version.secret-version",
            "module.mlflow.module.mlflow.module.db_secret.random_password.password",
            "module.mlflow.random_id.artifacts_bucket_name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.mlflow.module.mlflow.module.cloud_run.module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "module.mlflow.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-05T19:56:23.666-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "F09KfE2K5EQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/autograb-dev/global/urlMaps/mlflow-lb-https-redirect",
            "map_id": 4365974262562130488,
            "name": "mlflow-lb-https-redirect",
            "path_matcher": [],
            "project": "autograb-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/autograb-dev/global/urlMaps/mlflow-lb-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}